<resources>
    <string name="fileprovider">it.polito.justorder_framework.fileprovider</string>
    <string name="app_name">Food Now</string>
    <string name="button_name">Edit</string>
    <string name="button_load_image">Load Image</string>
    <string name="title">App name</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="imageOfUser">Image of the User</string>
    <string name="address">Address</string>

    <string name="address2">Restaurant Address</string>

    <string name="phone">Phone</string>
    <string name="validation_error">Your input is not valid</string>
    <string name="field_are_not_valid">You must provide valid data for all text field</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="category">Category</string>
    <string name="empty">Cart is empty, please select some products to order</string>

    <string name="product_list_title">Our Meals</string>
    <string name="order_summary_title">Orders Summary</string>
    <string name="openingDays">Opening Days</string>
    <string name="openingHour">Opening Hour</string>
    <string name="closingHour">Closing Hour</string>
    <string name="openDays">Opening Days</string>

    <string-array name="foodTypes">
        <item>Pizza</item>
        <item>Hamburger</item>
        <item>Chinese</item>
        <item>Sushi</item>
        <item>Indian</item>
        <item>Ice Creams</item>
        <item>Kebap</item>
        <item>Fusion</item>
    </string-array>
    <string name="title_activity_order_summary">OrderSummaryActivity</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="saturday">Saturday</string>
    <string name="placeholder">Placeholder</string>
    <string name="cost">Cost</string>
    <string name="note">Note</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredients1">Ingredients (use , to separate them)</string>
    <string name="orderId">Order ID</string>
    <string name="user">Customer Username</string>
    <string name="price">Total Price</string>
    <string name="timestamp">Order time</string>
    <string name="rider">Rider Name</string>

    <string name="edit_user_title">Edit User</string>
    <string name="sort_by_vote">Sort by Vote</string>
    <string name="sort_by_time_of_order">Most Popolar Hour</string>
    <string name="most_popolar_time">Most Popolar Time</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="delivered">Delivered</string>



</resources>
