<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/rowImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:contentDescription="@string/imageOfUser"
            app:srcCompat="@mipmap/ic_launcher" />

        <Space
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/button_load_image" />

        <Space
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

    </LinearLayout>


    <EditText
        android:id="@+id/nameTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rowImage"
        android:layout_alignStart="@id/rowImage"
        android:layout_alignLeft="@id/rowImage"
        android:layout_alignEnd="@id/rowImage"
        android:layout_alignRight="@id/rowImage"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/emailTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameTextField"
        android:layout_alignStart="@id/rowImage"
        android:layout_alignLeft="@id/rowImage"
        android:layout_alignEnd="@id/rowImage"
        android:layout_alignRight="@id/rowImage"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/phoneTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailTextField"
        android:layout_alignStart="@id/rowImage"
        android:layout_alignLeft="@id/rowImage"
        android:layout_alignEnd="@id/rowImage"
        android:layout_alignRight="@id/rowImage"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"/>


</LinearLayout>