<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/imageOfUser"
        app:srcCompat="@mipmap/ic_launcher_round"/>

    <EditText
        android:id="@+id/nameTextField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_alignStart="@id/imageView"
        android:layout_alignLeft="@id/imageView"
        android:layout_alignEnd="@id/imageView"
        android:layout_alignRight="@id/imageView"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:enabled="false"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/emailTextField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameTextField"
        android:layout_alignStart="@id/imageView"
        android:layout_alignLeft="@id/imageView"
        android:layout_alignEnd="@id/imageView"
        android:layout_alignRight="@id/imageView"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:enabled="false"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/phoneTextField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailTextField"
        android:layout_alignStart="@id/imageView"
        android:layout_alignLeft="@id/imageView"
        android:layout_alignEnd="@id/imageView"
        android:layout_alignRight="@id/imageView"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:enabled="false"
        android:textColor="#000000"/>
</LinearLayout>