<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity -->
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:id="@+id/drawer_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true">

<LinearLayout
    android:orientation="vertical"
    android:id="@+id/content_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/MyActionBar" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            >



            <TextView
                android:id="@+id/userTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                android:textStyle="italic"
                android:hint="@string/user" />

            <TextView
                android:id="@+id/addressTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/userTextField"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                android:textStyle="italic"
                android:hint="@string/address" />
            <TextView
                android:id="@+id/priceTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/addressTextField"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:hint="@string/price" />
            <TextView
                android:id="@+id/timestampTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/priceTextField"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textStyle="italic"
                android:hint="@string/timestamp" />
            <TextView
                android:id="@+id/riderTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/timestampTextField"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:hint="@string/rider" />

            <TextView
                android:id="@+id/productsTitleTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/riderTextField"
                android:layout_marginTop="40dp"
                android:text="Ordered Food"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />



            <TextView
                android:id="@+id/productsTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/productsTitleTextField"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>




        </RelativeLayout>
    </ScrollView>
</LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>